fixed error of JPA

--- a/src/main/resources/templates/hospital.mustache
+++ b/src/main/resources/templates/hospital.mustache
@@ -2,7 +2,7 @@
 <h1>IT_HOSPITAL</h1>
 {{#ithospital}}
     <div>
-        {{ihl_hosp_no}}
+        {{ihlHospNo}}
     </div>
     <br><br>
 {{/ithospital}}
